ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: nginx1.mayureshmulye.publicvm.com
    http:
      paths:
      - backend:
          service:
            name: nginx1
            port:
              number: 80
        path: /
        pathType: Exact
status:
  loadBalancer:
    ingress:
    - ip: 10.0.0.57
